# ecs

./: .gitignore  CMakeLists.txt  build.bat  build_code_gen.bat  ecs_codegen.bat  todo.txt
include/ecs/: archetype.h  archetype_manager.h  base_events.h  chunk_policy.h  component_description.h  component_prefab.h  ecs.h  ecs_perform.h  ecs_std.h  entity_id.h  entity_id_pool.h  entity_prefab.h  event.h  event_registration.h  hash.h  query_description.h  query_manager.h  request.h  request_registration.h  singleton.h  system_stage.h  time_profiler.h  type_annotation.h  type_description_storage.h  type_registration.h  user_type_annotation.h  user_type_registration.h
include/ecs/ska/: flat_hash_map.hpp
sources/code_gen/: CMakeLists.txt  main.cpp  timer.h
sources/ecs/: CMakeLists.txt  a.cpp  archetype.cpp  archetype_manager.cpp  entity_id_pool.cpp  entity_prefab.cpp  event.cpp  init.cpp  profiler_scope.h  query_manager.cpp  query_multi_thread.cpp  query_registration.cpp  request.cpp  singleton.cpp  type_annotation.cpp
sources/tests/: CMakeLists.txt  await_contruction_test.inl  await_contruction_test.inl.cpp  common.cpp  is_zero_sizeof.cpp  rtti_perf_test.cpp  test0.cpp  test0.h  test0_es.inl  test0_es.inl.cpp  tests.h  user_type_functions.h  user_type_registration.h
sources/tests/test0/: main.inl  main.inl.cpp
sources/tests/test1/: await_contruction_test.inl  await_contruction_test.inl.cpp  main.cpp
sources/tests/test2/: deffered_creation.inl  deffered_creation.inl.cpp  main.cpp
sources/tests/test3/: main.inl  main.inl.cpp
sources/tests/test4/: main.inl  main.inl.cpp
sources/tests/test5/: main.inl  main.inl.cpp
sources/tests/test6/: main.inl  main.inl.cpp  my_time.h
sources/tests/test7/: dijkstra.cpp  dijkstra.inl  dijkstra.inl.cpp  graph.h  main.inl  main.inl.cpp
